Add Clark Clusters to NER model training